<resources>
    <string name="app_name">砖头人</string>
    <string name="default_username">砖头人</string>
    <string name="default_motto">漂泊者分享交流社区</string>
    <string name="my_bricks">我的砖集</string>
    <string name="my_flower">我的鲜花</string>
    <string name="my_brick">我的砖头</string>
    <string name="city">我的地点</string>
    <string name="top">今日头条</string>
    <string name="detail">详情</string>
    <string name="publish">发布</string>
    <string name="userInfo">个人资料</string>
    <string name="comment">评论</string>
    <string name="btn_camera">拍照</string>
    <string name="btn_photo">相册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgetpwd">忘记密码?</string>
    <string name="inputusername">请输入用户名</string>
    <string name="inputpwd">请输入密码</string>
    <string name="settingusername">设置用户名（建议用手机号）</string>
    <string name="settingpwd">设置密码，6-20位字母、数字组合</string>
    <string name="verifypwd">确认密码</string>
    <string-array name="tabNames">
        <item>砖集</item>
        <item>砖头人</item>
        <item>我的</item>
    </string-array>
    <string name="findpwdprompt">请加砖头人app用户反馈群（387655797），找管理员索要登录密码。</string>
    <string name="loading_more">正在努力加载中...</string>
    <string name="not_loading">这里是我的底线了</string>

    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>

    <string name="newUpdateAvailable">发现新版本</string>
    <string name="dialogPositiveButton">立即下载</string>
    <string name="dialogNegativeButton">以后再说</string>
    <string name="app_no_new_update">已经是最新版本</string>
    <!--<string name="download_progress">正在下载:%1$d%%</string>-->
    <string name="download_success">下载完成，点击安装</string>
</resources>
