<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@mipmap/bm_login_backgroud">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_30"
                android:orientation="horizontal"
                android:padding="@dimen/dp_08"
                android:background="@drawable/input_edit_bg">
                <ImageView
                    android:src="@mipmap/bm_login_user_icon"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20" />
                <EditText
                    android:id="@+id/username"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/sp_16"
                    android:layout_marginLeft="@dimen/dp_05"
                    android:layout_gravity="center"
                    android:hint="@string/inputusername"
                    android:textCursorDrawable="@drawable/cursor"
                    android:cursorVisible="true"
                    android:textColorHint="@color/text_light_gray"
                    android:textColor="@color/text_color_dark"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal"
                android:padding="@dimen/dp_08"
                android:background="@drawable/input_edit_bg">
                <ImageView
                    android:src="@mipmap/bm_logn_pwd_icon"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20" />


                <EditText
                    android:layout_marginLeft="@dimen/dp_05"
                    android:id="@+id/password"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/sp_16"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:hint="@string/inputpwd"
                    android:textCursorDrawable="@drawable/cursor"
                    android:cursorVisible="true"
                    android:textColorHint="@color/text_light_gray"
                    android:textColor="@color/text_color_dark"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/sp_18"
                android:gravity="center"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:orientation="horizontal"
                android:background="@drawable/login_submit_bg"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_05"
                android:padding="@dimen/dp_05"
                >
                <TextView
                    android:id="@+id/forgetpwd"
                    android:text="@string/forgetpwd"
                    android:textSize="@dimen/sp_14"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/text_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >
            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginLeft="@dimen/dp_80"
                android:layout_marginRight="@dimen/dp_80">

                <TextView
                    android:id="@+id/loginWX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawablePadding="@dimen/dp_06"
                    android:drawableTop="@mipmap/share_weixin_icon"
                    android:text="微信登录"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/sp_16"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/loginQQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="@dimen/dp_06"
                    android:drawableTop="@mipmap/share_qq_friends_icon"
                    android:text="QQ登录"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/sp_16"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/rl"
                android:layout_marginBottom="@dimen/dp_30"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_005"
                    android:layout_weight="1"
                    android:background="@color/line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:gravity="center"
                    android:text="社交账号登录"
                    android:textColor="@color/text_color_deep"
                    android:textSize="@dimen/sp_16"
                    tools:ignore="HardcodedText,RtlHardcoded" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_005"
                    android:layout_weight="1"
                    android:background="@color/line" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
