<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
 <!--     android:fitsSystemWindows="true"-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="gone"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorAccent"
            android:minHeight="?attr/actionBarSize">

            <RelativeLayout android:id="@+id/back1"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/bm_back"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/default_username"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="normal" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/bm_mypushlish_headbackgroud">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <View
            android:id="@+id/paddingheight"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorAccent"
            android:minHeight="?attr/actionBarSize"
            >

            <RelativeLayout android:id="@+id/back"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:layout_width="@dimen/dp_18"
                    android:layout_height="@dimen/dp_24"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/bm_back"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="normal" />
        </android.support.v7.widget.Toolbar>

        </RelativeLayout>
        </LinearLayout>
        <com.brickman.app.module.widget.view.CircleImageView
            android:id="@+id/avator"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher"
            app:border_color="@color/colorAccent"
            app:border_width="0dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/avator"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_24"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/default_username"
                    android:id="@+id/name"
                    android:textColor="@color/text_light_gray"
                    android:textSize="@dimen/sp_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/sex"
                    android:layout_marginLeft="@dimen/dp_02"
                    android:layout_width="@dimen/dp_14"
                    android:layout_height="@dimen/dp_14"
                    android:src="@mipmap/man"/>
            </LinearLayout>
            <TextView
                android:id="@+id/desc"
                android:text="@string/default_motto"
                android:layout_marginTop="@dimen/dp_07"
                android:textColor="@color/text_light_gray"
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    <in.srain.cube.views.ptr.PtrClassicFrameLayout
        android:layout_weight="1"
        android:id="@+id/ptr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:ptr_duration_to_close="300"
        app:ptr_duration_to_close_header="2000"
        app:ptr_keep_header_when_refresh="true"
        app:ptr_pull_to_fresh="false"
        app:ptr_ratio_of_header_height_to_refresh="1.2"
        app:ptr_resistance="2.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_gray"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
    </RelativeLayout>
</LinearLayout>